@@ -1,5 +1,8 @@
 2013-05-12  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
+	* src/qt4/action_sequence_selector.cpp:
+	- 表示スタイルの修正
+
 	* src/model/main_data.h:
 	* src/qt4/action_sequence_selector.cpp:
 	* src/qt4/action_sequence_selector.h:
